<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/video_news_child_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/channel_title_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/news_title_bgn_read" >

        <ImageView
            android:id="@+id/channel_title_headpic"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7.5dp"
            android:clickable="true"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/back_action_selector" />

        <TextView
            android:id="@+id/channel_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/channel_manager_title"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/channel_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/channel_title_layout" >

        <RelativeLayout
            android:id="@+id/channel_layout_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/channel_mine_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/Channel_mine_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/channel_my_channel"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/Channel_mine_remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/Channel_mine_title"
                    android:text="@string/channel_my_channel_info"
                    android:textColor="@color/darkgray"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:id="@+id/Channel_baseline"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/Channel_mine_title"
                    android:layout_marginTop="5dp"
                    android:background="@color/darkgray" />

                <com.warmtel.android.common.widget.GridViewCustom
                    android:id="@+id/Channel_mine_gridview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Channel_baseline"
                    android:layout_marginTop="5dp"
                    android:horizontalSpacing="10dp"
                    android:numColumns="4"
                    android:stretchMode="columnWidth"
                    android:gravity="center"
                    android:verticalSpacing="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/channel_more_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/channel_mine_layout" >

                <TextView
                    android:id="@+id/Channel_more_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/channel_more_channel"
                    android:textSize="24sp" />

                <RelativeLayout
                    android:id="@+id/Channel_more_baseline"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/Channel_more_title"
                    android:layout_marginTop="5dp"
                    android:background="@color/darkgray" />

                <com.warmtel.android.common.widget.GridViewCustom
                    android:id="@+id/Channel_more_gridview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Channel_more_baseline"
                    android:layout_marginTop="5dp"
                    android:horizontalSpacing="10dp"
                    android:numColumns="4"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="10dp" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>